--- a/FoodCalculator/MainWindow.xaml
+++ b/FoodCalculator/MainWindow.xaml
@@ -5,8 +5,122 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FoodCalculator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="450" Width="800" Background="White">
+    <Window.Resources>
+        <local:MainWindowViewModel x:Key="MainWindowViewModel">
+        </local:MainWindowViewModel>
+        <Style x:Key="FontStyle" TargetType="TextBox">
+            <Setter Property="TextWrapping" Value="Wrap"></Setter>
+            <Setter Property="IsReadOnly" Value="True"></Setter>
+            <Setter Property="BorderBrush" Value="Black"></Setter>
+            <Setter Property="BorderThickness" Value="1"></Setter>
+            <Setter Property="VerticalContentAlignment" Value="Center"></Setter>
+            <Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
 
+
+        </Style>
+
+    </Window.Resources>
+
+    <Grid  DataContext="{StaticResource MainWindowViewModel}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.5*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="2*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.RowSpan="8" Grid.ColumnSpan="4" DataContext="{Binding BreakfastRationList}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0.5*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+
+            </Grid.ColumnDefinitions>
+            <Border Grid.RowSpan="8" BorderBrush="Black" BorderThickness="1">
+                <Grid >
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+
+                    <TextBlock Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Text="DAY"/>
+                    <TextBlock Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Text="MON"/>
+                    <TextBlock Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Text="TUE"/>
+                    <TextBlock Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Text="WED"/>
+                    <TextBlock Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Text="THU"/>
+                    <TextBlock Grid.Row="5" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Text="FRI"/>
+                    <TextBlock Grid.Row="6" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Text="SAT"/>
+                    <TextBlock Grid.Row="7" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Text="SUN"/>
+                </Grid>
+            </Border>
+            <Border  Grid.ColumnSpan="4" BorderBrush="Black" BorderThickness="1" >
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="0.5*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Row="0" Grid.Column="1"  Text="Breakfast"  FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+                    <TextBlock Grid.Row="0" Grid.Column="2"  Text="Lunch" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+                    <TextBlock Grid.Row="0" Grid.Column="3"  Text="Dinner" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+                </Grid>
+            </Border>
+
+        </Grid>
+
+        <Button Grid.Column="4" Grid.Row="0" Content="Change Food List"/>
+        <Button Grid.Column="4" Grid.Row="1" Content="Calculate Food" Command="{Binding Source={StaticResource MainWindowViewModel}, Path=CalcFoodCommand}"/>
+        <TextBox Grid.Row="1" Grid.Column="1" Style="{StaticResource FontStyle}" Text="{Binding MondayBreakfastRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="2" Grid.Column="1" Style="{StaticResource FontStyle}" Text="{Binding TuesdayBreakfastRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="3" Grid.Column="1" Style="{StaticResource FontStyle}" Text="{Binding WednesdayBreakfastRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="4" Grid.Column="1" Style="{StaticResource FontStyle}" Text="{Binding ThursdayBreakfastRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="5" Grid.Column="1" Style="{StaticResource FontStyle}" Text="{Binding FridayBreakfastRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="6" Grid.Column="1" Style="{StaticResource FontStyle}" Text="{Binding SaturdayBreakfastRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="7" Grid.Column="1" Style="{StaticResource FontStyle}" Text="{Binding SundayBreakfastRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+
+        <TextBox Grid.Row="1" Grid.Column="2" Style="{StaticResource FontStyle}" Text="{Binding MondayLunchRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="2" Grid.Column="2" Style="{StaticResource FontStyle}" Text="{Binding TuesdayLunchRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="3" Grid.Column="2" Style="{StaticResource FontStyle}" Text="{Binding WednesdayLunchRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="4" Grid.Column="2" Style="{StaticResource FontStyle}" Text="{Binding ThursdayLunchRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="5" Grid.Column="2" Style="{StaticResource FontStyle}" Text="{Binding FridayLunchRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="6" Grid.Column="2" Style="{StaticResource FontStyle}" Text="{Binding SaturdayLunchRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="7" Grid.Column="2" Style="{StaticResource FontStyle}" Text="{Binding SundayLunchRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+
+        <TextBox Grid.Row="1" Grid.Column="3" Style="{StaticResource FontStyle}" Text="{Binding MondayDinnerRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="2" Grid.Column="3" Style="{StaticResource FontStyle}" Text="{Binding TuesdayDinnerRation, UpdateSourceTrigger=PropertyChanged}" ></TextBox>
+        <TextBox Grid.Row="3" Grid.Column="3" Style="{StaticResource FontStyle}" Text="{Binding WednesdayDinnerRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="4" Grid.Column="3" Style="{StaticResource FontStyle}" Text="{Binding ThursdayDinnerRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="5" Grid.Column="3" Style="{StaticResource FontStyle}" Text="{Binding FridayDinnerRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="6" Grid.Column="3" Style="{StaticResource FontStyle}" Text="{Binding SaturdayDinnerRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="7" Grid.Column="3" Style="{StaticResource FontStyle}" Text="{Binding SundayDinnerRation, UpdateSourceTrigger=PropertyChanged}"></TextBox>
     </Grid>
 </Window>
