--- a/FoodCalculator/AddFoodWindow.xaml
+++ b/FoodCalculator/AddFoodWindow.xaml
@@ -55,7 +55,7 @@
                                 <ColumnDefinition Width="24"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock FontSize="20"  Text="{Binding Name}" />
-                            <TextBlock FontSize="20" Grid.Column="1"  Text="{Binding Portions}" />
+                            <TextBlock FontSize="20" Grid.Column="1"  Text="{Binding Id}" />
                             <Button Style="{StaticResource MicroButtonStyle}" Grid.Column="2"  Content="+" Command="{Binding Source={StaticResource FoodCalc},Path=Increment,Mode=OneWay}" CommandParameter="{Binding Id}"></Button>
                             <Button Style="{StaticResource MicroButtonStyle}" Grid.Column="3"  Content="-" Command="{Binding Source={StaticResource FoodCalc},Path=Decrement,Mode=OneWay}" CommandParameter="{Binding Id}"></Button>
                             <Button Style="{StaticResource MicroButtonStyle}" Grid.Column="4"  Content="x" Command="{Binding Source={StaticResource FoodCalc},Path=Delete,Mode=TwoWay}" CommandParameter="{Binding Id}"></Button>
